--- a/src/css/index.css
+++ b/src/css/index.css
@@ -87,6 +87,10 @@ body {
     padding: 1rem;
     font-size: 0.9rem;
     color: #555;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .info p {
