--- a/src/css/index.css
+++ b/src/css/index.css
@@ -91,6 +91,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: left;
 }
 
 .info p {
