--- a/src/css/index.css
+++ b/src/css/index.css
@@ -90,7 +90,7 @@ body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: flex-start;
     text-align: left;
 }
 
