--- a/src/css/index.css
+++ b/src/css/index.css
@@ -66,7 +66,7 @@ body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     height: 100%;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -84,7 +84,6 @@ body {
 }
 
 .info {
-    padding: 5px, 0;
     font-size: 0.9rem;
     color: #555;
     text-align: left;
