--- a/src/css/index.css
+++ b/src/css/index.css
@@ -84,6 +84,8 @@ body {
 }
 
 .info {
+    padding-left: 20px;
+    padding-top: 10px;
     font-size: 0.9rem;
     color: #555;
     text-align: left;
